--- a/css/animations.css
+++ b/css/animations.css
@@ -9,6 +9,7 @@
         transform: scale(1);
     }
 }
+
 @keyframes fillUp {
     from {
         transform: scaleX(0);
@@ -17,6 +18,7 @@
         transform: scaleX(1);
     }
 }
+
 @keyframes picImage {
     from {
         opacity: 0;
@@ -27,6 +29,7 @@
         transform: scale(1) translateY(0);
     }
 }
+
 @keyframes picShadow {
     from {
         opacity: 0;
@@ -37,6 +40,7 @@
         transform: scale(1.1) translateY(0);
     }
 }
+
 @keyframes slideDown {
     from {
         opacity: 0;
@@ -47,6 +51,7 @@
         transform: translateY(0);
     }
 }
+
 @keyframes slideUp {
     from {
         opacity: 0;
@@ -57,6 +62,7 @@
         transform: translateY(0);
     }
 }
+
 @keyframes zoomOut {
     from {
         opacity: 0;
@@ -67,6 +73,22 @@
         transform: scale(1);
     }
 }
+
+/* scroll down indicator */
+@keyframes scroll {
+    0%{
+        opacity: 0;
+        transform: translateY(-20px)
+    }
+    50%{
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+        transform: translateY(10px) scale3d(0.5, 0.5, 0.5);
+    }
+}
+
 
 /*2. Define animation attributes*/
 wallpaper,
@@ -82,11 +104,13 @@ wallpaper,
     animation-timing-function: cubic-bezier(0, 0.5, 0, 1);
     animation-fill-mode: both;
 }
+
 .picture-shadow,
 .picture-image {
     animation-duration: 750ms;
     animation-timing-function: cubic-bezier(0, 0.5, 0.25, 1.25);
 }
+
 wallpaper,
 .picture-shadow,
 .picture-image {
@@ -97,71 +121,95 @@ wallpaper,
 .contact {
     animation-name: bounceIn;
 }
+
 wallpaper {
     animation-timing-function: ease-out;
 }
+
 .wallpaper.is-loaded {
     animation-delay: 1s;
     animation-name: zoomOut;
 }
+
 .picture.is-loaded .picture-shadow {
     animation-name: picShadow;
 }
+
 .picture.is-loaded .picture-image {
     animation-name: picImage;
 }
+
 .name {
     animation-name: slideDown;
 }
+
 .job {
     animation-name: slideUp;
 }
+
 .hr {
     animation-name: fillUp;
 }
+
 .description {
     animation-name: slideUp;
 }
+
 .social li {
     animation-duration: 500ms;
     animation-name: slideUp;
     animation-timing-function: cubic-bezier(0.5, 0, 0.5, 1.5);
 }
 
+.scroll{
+    animation: scroll 4s ease-in-out infinite;
+}
+
 /*4. Delay animations*/
 .name {
     animation-delay: 100ms;
 }
+
 .job {
     animation-delay: 200ms;
 }
+
 .hr {
     animation-delay: 300ms;
 }
+
 .description {
     animation-delay: 400ms;
 }
+
 .picture-image {
     animation-delay: 500ms;
 }
+
 .picture-shadow {
     animation-delay: 500ms;
 }
+
 .contact {
     animation-delay: 600ms;
 }
+
 .social li:nth-child(1) {
     animation-delay: 800ms;
 }
+
 .social li:nth-child(2) {
     animation-delay: 900ms;
 }
+
 .social li:nth-child(3) {
     animation-delay: 1s;
 }
+
 .social li:nth-child(4) {
     animation-delay: 1.1s;
 }
+
 .social li:nth-child(5) {
     animation-delay: 1.2s;
 }
